<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Inicio">

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="73dp"
        android:backgroundTint="#50E157"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#E91E63"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnIniciarSesion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvDescripcion"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="73dp"
        android:backgroundTint="#50E157"
        android:text="@string/iniciar_sesi_n"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#4CAF50"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvDescripcion" />

    <TextView
        android:id="@+id/txvInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/inicio"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imvMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvRecicla"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:text="@string/recicla_tus_residuos"
        android:textColor="#040404"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/txvDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:layout_marginTop="16dp"
        android:text="@string/reduce_f_cilmente_la_generaci_n_de_residuos_dom_sticos_y_gana_puntos_para_canjear"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/txvRecicla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/txvInicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />



</androidx.constraintlayout.widget.ConstraintLayout>