<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <TextView
        android:id="@+id/txvIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="204dp"
        android:text="@string/iniciar_sesi_nlogin1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvMenu2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <ImageView
        android:id="@+id/imvMenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txvIniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/menu" />

    <TextView
        android:id="@+id/txvEcoRewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="167dp"
        android:text="@string/ecorewards"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/btnIniciarSesion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="122dp"
        android:backgroundTint="@color/verde_claro"
        android:text="@string/iniciar_sesi_nlogin2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkRecordarme"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/txvNoTieneCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="31dp"
        android:text="@string/no_tienes_una_cuenta"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txvCrearCuenta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <TextView
        android:id="@+id/txvCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="Crea una nueva cuenta"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textColorLink="#3F51B5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <CheckBox
        android:id="@+id/chkRecordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="42dp"
        android:text="Recordarme"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txvOlvidastePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bBorrar"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/txvOlvidastePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="31dp"
        android:text="@string/olvidaste_la_contrase_a"
        android:textColor="#2196F3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chkRecordarme"
        app:layout_constraintTop_toBottomOf="@+id/bBorrar"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/bBorrar"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#50E157"
        android:text="@string/borrar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chkRecordarme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b6" />

    <Button
        android:id="@+id/b9"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#50E157"
        android:text="@string/_9"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/b6"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#50E157"
        android:text="@string/_6"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bBorrar"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <ImageView
        android:id="@+id/imvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txvUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/edtCodigo"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="36dp"
        android:gravity="start|top"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:hint="Ingrese su código aquí"
        tools:ignore="HardcodedText"
        app:layout_constraintBottom_toTopOf="@+id/imvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvUsuario"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtContraseña"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/ingrese_su_correo_electr_nico"
        android:inputType="numberPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toStartOf="@+id/b3"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/imvPassword"
        app:layout_constraintVertical_bias="0.222" />

    <ImageView
        android:id="@+id/imvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txvPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435"
        app:srcCompat="@drawable/password" />

    <Button
        android:id="@+id/b0"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#50E157"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <Button
        android:id="@+id/b7"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="#50E157"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b6"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <Button
        android:id="@+id/b5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#50E157"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b0" />

    <Button
        android:id="@+id/b1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#50E157"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/b6"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <Button
        android:id="@+id/b4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#50E157"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/b9"
        app:layout_constraintStart_toEndOf="@+id/b3"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <Button
        android:id="@+id/b8"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="#50E157"
        android:text="@string/_8"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/contrase_a"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <Button
        android:id="@+id/b2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#50E157"
        android:text="@string/numero_dos"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/b7"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <Button
        android:id="@+id/b3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#50E157"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorLink="#50E157"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/b8"

        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <TextView
        android:id="@+id/txvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="201dp"
        android:text="@string/correo_electr_nico"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvUsuario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <ImageView
        android:id="@+id/ver"
        android:layout_width="42dp"
        android:layout_height="39dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCodigo"
        app:srcCompat="@drawable/visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
